--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="css/all.min.css" />
 
   <!-- main css -->
-  <link rel="stylesheet" href="css/kasper.css" />
+  <link rel="stylesheet" href="css/style.css" />
   <!-- google font  -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -518,7 +518,7 @@
     <!-- start footer  -->
     <footer>
       <div class="container">
-        <img src="/image/logo.png" alt="logo">
+        <img src="./image/logo.png" alt="logo">
         <p>We Are Social</p>
         <div class="social-icons">
           <i class="fab fa-facebook-f"></i>
